test/pass/internal/lambda_save_restore.lily
class Box[A](input: A)
{
    var @input = input
}

var v =
    (||
        (||
            Box(
                (|| 1)
            )
        )
    )

v()()
